[gd_scene load_steps=5 format=3 uid="uid://c15a6yvms4nne"]

[ext_resource type="Script" path="res://Health Bar.gd" id="1_hkitq"]
[ext_resource type="Texture2D" uid="uid://btbgwnae8tupk" path="res://Lives3.png" id="2_t13th"]
[ext_resource type="Texture2D" uid="uid://c7vsisbe0tpyp" path="res://Lives2.png" id="3_ctffm"]
[ext_resource type="Texture2D" uid="uid://csg46ufemmqdv" path="res://Lives1.png" id="4_4u5u8"]

[node name="Health Bar" type="Node2D"]
position = Vector2(97, 55)
script = ExtResource("1_hkitq")
metadata/_edit_group_ = true

[node name="Life3" type="Sprite2D" parent="."]
texture = ExtResource("2_t13th")

[node name="Life2" type="Sprite2D" parent="."]
texture = ExtResource("3_ctffm")

[node name="Life1" type="Sprite2D" parent="."]
texture = ExtResource("4_4u5u8")
